src/objects/sked_Involved_Individual__c.object
<CustomObject>
    <fields>
        <fullName>sked_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Involved Individuals</relationshipLabel>
        <relationshipName>sked_Involved_Individuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Date_of_Incident__c</fullName>
        <formula>sked_Incident_Report__r.sked_Date_Time_of_Incident__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Incident</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sked_Designation__c</fullName>
        <label>Designation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_EHR_Related_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EHR Related Person</label>
        <referenceTo>HealthCloudGA__EhrRelatedPerson__c</referenceTo>
        <relationshipLabel>Involved Individuals</relationshipLabel>
        <relationshipName>sked_Involved_Individuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Incident_Report__c</fullName>
        <label>Incident Report</label>
        <referenceTo>sked_Accident_Incident_Report__c</referenceTo>
        <relationshipLabel>Involved Individuals</relationshipLabel>
        <relationshipName>sked_Involved_Individuals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Involved_Individuals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Post_Code__c</fullName>
        <label>Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_State_Province__c</fullName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Type_of_Incident__c</fullName>
        <formula>TEXT(sked_Incident_Report__r.sked_Type_of_Incident__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Incident</label>
        <type>Text</type>
    </fields>
    <label>Involved Individual</label>
    <nameField>
        <displayFormat>IDV-{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Involved Individuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_Record_when_Status_is_Completed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL( sked_Incident_Report__r.sked_Status__c , &quot;Completed&quot;), 
$Profile.Name &lt;&gt; &quot;System Administrator&quot; 

)</errorConditionFormula>
        <errorMessage>This record can not be modified once the Incident Status has been set to &quot;Completed&quot; please contact your System Administrator to make further changes.</errorMessage>
    </validationRules>
</CustomObject>